vietnam iz da bezt

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h1>Nguồn của DevNTNghia</h1>
     </header>
     <main id="content">
-      <h2 role="header">Tự động thêm nguồn:</h2>
+      <h2 role="header">Thêm nguồn tự động:</h2>
       <ul>
         <li>
           <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://hiimnghia.github.io" target="_blank" role="button">Thêm vào Cydia</a>
         </li>
       </ul>
 
-      <h2 role="header">Manual Instructions</h2>
+      <h2 role="header">Thêm nguồn thủ công:</h2>
       <ul>
         <li>
           <p>1. Mở Cydia</p>
