index.html edited

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       
       <ul>
-		<li><a href="https://www.facebook.com/BossOfTPGT" role="button">Follow on Facebook</a></li>
+		<li><a href="https://www.facebook.com/BossOfTPGT" role="button">Theo dõi tôi trên Facebook</a></li>
       </ul>
     </main>
     <footer role="footer">
