index.html edited 2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Nguồn của DevNTNghia">
-    <meta property="og:url" content="https://hiimnghia.github.io"/>
+    <meta property="og:url" content="https://devntnghia.github.io"/>
     <meta property="twitter:card" content="summary"/>
     <meta property="twitter:title" content="DevNTNghia Repo">
   	<script src="js/ios7.js"></script>
@@ -19,7 +19,7 @@
       <h2 role="header">Thêm nguồn tự động:</h2>
       <ul>
         <li>
-          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://hiimnghia.github.io" target="_blank" role="button">Thêm vào Cydia</a>
+          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://devntnghia.github.io" target="_blank" role="button">Thêm vào Cydia</a>
         </li>
       </ul>
 
@@ -42,7 +42,7 @@
         </li>
 
         <li>
-          <p>5. Gõ: <strong>hiimnghia.github.io</strong></p>
+          <p>5. Gõ: <strong>devntnghia.github.io</strong></p>
         </li>
 
         <li>
@@ -59,7 +59,7 @@
       <p>&copy; DevNTNghia 2017-2018</p>
       <nav role="navigation">
         <p>
-          <a href="https://hiimnghia.github.io">Trang chủ</a>
+          <a href="https://devntnghia.github.io">Trang chủ</a>
         </p>
       </nav>
     </footer>
