--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <h2 role="header">Thêm nguồn tự động:</h2>
       <ul>
         <li>
-          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://devntnghia.github.io" target="_blank" role="button">Thêm vào Cydia</a>
+          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://devntnghia.github.io/">
+			<img class="icon" src="cydia.PNG"/>
+             <label>Open Cydia</label>
+		</a>
         </li>
       </ul>
 
@@ -52,7 +55,11 @@
 
       
       <ul>
-		<li><a href="https://www.facebook.com/BossOfTPGT" role="button">Theo dõi tôi trên Facebook</a></li>
+		<li><a href="https://www.facebook.com/DevNTNghia" target="_blank">
+<img class="icon" src="fb.PNG"/>
+<label>Theo dõi tôi trên Facebook</label>
+</a>
+</li>
       </ul>
     </main>
     <footer role="footer">
