--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Nguồn của DevNTNghia</h1>
     </header>
     <main id="content">
-      <h2 role="header">Thêm nguồn tự động:</h2>
+      <h2>Thêm nguồn tự động:</h2>
       <ul>
         <li>
           <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://devntnghia.github.io/">
@@ -22,7 +22,7 @@
         </li>
       </ul>
 
-      <h2 role="header">Thêm nguồn thủ công:</h2>
+      <h2>Thêm nguồn thủ công:</h2>
       <ul>
         <li>
           <p>1. Mở Cydia</p>
@@ -58,13 +58,6 @@
 </li>
       </ul>
     </main>
-    <footer role="footer">
-      <p>&copy; DevNTNghia 2017-2018</p>
-      <nav role="navigation">
-        <p>
-          <a href="https://devntnghia.github.io">Trang chủ</a>
-        </p>
-      </nav>
-    </footer>
+   <p style="text-align:center;">DevNTNghia © 2017-2018</p>
   </body>
 </html>
