--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>
           <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://devntnghia.github.io/">
 			<img class="icon" src="cydia.PNG"/>
-             <label>Open Cydia</label>
+             <label>Nhấn để thêm vào Cydia</label>
 		</a>
         </li>
       </ul>
