--- a/index.html
+++ b/index.html
@@ -1,60 +1,52 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Nguồn của DevNTNghia</title>
-    <link rel="stylesheet" type="text/css" href="css/ios7.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Nguồn của DevNTNghia">
-    <meta property="og:url" content="https://devntnghia.github.io"/>
-  </head>
-  <body>
-    <main id="content">
-      <h2>Thêm nguồn tự động:</h2>
-      <ul>
-        <li>
-          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://devntnghia.github.io/">
-			<img class="icon" src="cydia.PNG"/>
-             <label>Nhấn để thêm vào Cydia</label>
-		</a>
-        </li>
-      </ul>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>DevNTNghia's Repo</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-loading">
 
-      <h2>Thêm nguồn thủ công:</h2>
-      <ul>
-        <li>
-          <p>1. Mở Cydia</p>
-        </li>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-        <li>
-          <p>2. Nhấn tab <em>Sources</em></p>
-        </li>
+				<!-- Main -->
+					<section id="main">
+						<header>
+							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+							<h1>DevNTNghia</h1>
+							<p>Nguồn Cydia chính thức</p>
+						</header>
 
-        <li>
-          <p>3. Nhấn nút <em>Sửa</em></p>
-        </li>
+						<footer>
+							<ul class="icons">
+								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://devntnghia.github.io/" class="fa-plus">Thêm Nguồn</a></li>
+							</ul>
+						</footer>
+					</section>
 
-        <li>
-          <p>4. Nhấn nút <em>Thêm</em></p>
-        </li>
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="copyright">
+							<li>&copy; DevNTNghia</li>
+						</ul>
+					</footer>
 
-        <li>
-          <p>5. Gõ: <strong>devntnghia.github.io</strong></p>
-        </li>
+			</div>
 
-        <li>
-          <p>6. Nhấn <em>Thêm Nguồn</em></p>
-        </li>
-      </ul>
+		<!-- Scripts -->
+			<!--[if lte IE 8]><script src="assets/js/respond.min.js"></script><![endif]-->
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
 
-      
-      <ul>
-		<li><a href="https://www.facebook.com/DevNTNghia" target="_blank">
-<img class="icon" src="fb.PNG"/>
-<label>Theo dõi tôi trên Facebook</label>
-</a>
-</li>
-      </ul>
-    </main>
-   <p style="text-align:center;">DevNTNghia © 2017-2018</p>
-  </body>
+	</body>
 </html>
