--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>DevNTNghia</h1>
 							<p>Nguồn Cydia chính thức</p>
 						</header>
@@ -33,7 +32,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; DevNTNghia</li>
+							<li>&copy; NTNghia</li>
 						</ul>
 					</footer>
 
