KI NIEM 1 NAM TUOI

--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 		<title>DevNTNghia's Repo</title>
 	</head>
 	<body>
-		<h1 class="a">This is a </h1>
-		<h1 class="closer">Cydia Repository</h1>
-		<h3 class="b">Made by NTNghia</h3>
-		<h2 class="a">CLICK KANNA-CHAN TO ADD THE REPO TO CYDIA</h2>
+		<h1 class="a">DevNTNghia's Cydia Repo</h1>
+		<h2 class="a">KỈ NIỆM 1 NĂM TUỔI CỦA REPO DEVNTNGHIA!</h2>
+		<h2 class="a">Ấn vào ảnh GIF để thêm Repo vào Cydia.</h2>
 		<h1 class="arrowhead">|</h1>
 		<h1 class="arrowhead">|</h1>
 		<h1 class="arrowhead">V</h1>
