KI NIEM 1 NAM TUOI

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	src: local('Samsung Sans Regular'), url('./somethings/SamsungSans-Regular.woff') format('woff');
 }
 
+body {
+	background-color: pink;
+}
+
 .center {
     display: block;
     margin-left: auto;
