--- a/depics/sspd.html
+++ b/depics/sspd.html
@@ -7,6 +7,7 @@
 </head>
 <body class="pinstripe">
 <panel>
+    <label>Description:</label>
     <fieldset style="clear:both">
         <div style="font-size:small;">
             <center><p>Turn your boring Power Down view into Samsung's one!</p></center>
