--- a/depics/sspd.html
+++ b/depics/sspd.html
@@ -9,7 +9,7 @@
 <panel>
     <label>Description:</label>
     <fieldset style="clear:both">
-        <div style="font-size:small;">
+        <div>
             <center><p>Turn your boring Power Down view into Samsung's one!</p></center>
         </div>
     </fieldset>
@@ -20,6 +20,20 @@
                 1.1.1:<br><br>
                 Removed DRM so every sources can host this deb without any problems.
             </p>
+        </div>
+    </fieldset>
+    <label>More:</label>
+    <fieldset style="clear:both">
+        <div>
+            <p>
+                Source code:<br><br>
+                <a href="https://github.com/devntnghia/samsungpowerdown">Github</a>
+			</p>
+			<p>
+				Messege me:<br><br>
+				<a href="https://www.messenger.com/t/DevNTNghia">Messenger</a><br>
+				<a href="https://www.reddit.com/user/hiimnghia">Reddit</a>
+			</p>
         </div>
     </fieldset>
 </panel>
