--- a/depics/sspd.html
+++ b/depics/sspd.html
@@ -26,11 +26,10 @@
     <fieldset style="clear:both">
         <div>
             <p>
-                Source code:<br><br>
-                <a href="https://github.com/devntnghia/samsungpowerdown">Github</a>
+                Source code: <a href="https://github.com/devntnghia/samsungpowerdown">Github</a>
 			</p>
 			<p>
-				Messege me:<br><br>
+				Messege me:<br>
 				<a href="https://www.messenger.com/t/DevNTNghia">Messenger</a><br>
 				<a href="https://www.reddit.com/user/hiimnghia">Reddit</a>
 			</p>
