--- a/depics/sspd.html
+++ b/depics/sspd.html
@@ -17,7 +17,13 @@
     <fieldset style="clear:both">
         <div>
             <p style="text-align:justify">
-                1.1.1:<br><br>
+                <b>1.1.2:</b><br><br>
+                Added label enable/disable button.
+            </p>
+        </div>
+        <div>
+            <p style="text-align:justify">
+                <b>1.1.1:</b><br><br>
                 Removed DRM so every sources can host this deb without any problems.
             </p>
         </div>
