--- a/depics/sspd.html
+++ b/depics/sspd.html
@@ -17,6 +17,15 @@
     <fieldset style="clear:both">
         <div>
             <p style="text-align:justify">
+                <b>1.2:</b><br><br>
+                Added orientation support for iPad (tested) and iPhone (not tested). I only have an iPad since my iPhone 8+ screen is broken :(.<br>
+                Finished the tweak's job, so this tweak will not be updated in future.<br>
+                Thanks for using my tweak, hope to see you soon.<br><br><br>
+                DevNTNghia (or Memaru if you want it shorter XD).
+            </p>
+        </div>
+        <div>
+            <p style="text-align:justify">
                 <b>1.1.2:</b><br><br>
                 Added label enable/disable button.
             </p>
@@ -25,6 +34,24 @@
             <p style="text-align:justify">
                 <b>1.1.1:</b><br><br>
                 Removed DRM so every sources can host this deb without any problems.
+            </p>
+        </div>
+        <div>
+            <p style="text-align:justify">
+                <b>1.1:</b><br><br>
+                I don't know XD.
+            </p>
+        </div>
+        <div>
+            <p style="text-align:justify">
+                <b>1.0.1:</b><br><br>
+                Fixed chown & chmod problem.
+            </p>
+        </div>
+        <div>
+            <p style="text-align:justify">
+                <b>1.0.1:</b><br><br>
+                Release the tweak.
             </p>
         </div>
     </fieldset>
