--- a/404.html
+++ b/404.html
@@ -1,62 +1,113 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Home - my.js</title>
+		<title>404 Not Foud</title>
   <meta name="description" content="Error Page Not Full">
   <meta name="keywords" content="Library,my.js,myJS,myjs,shin,nguyenthanh,home,JavaScript">
   <meta name="author" content="Shin">
-	<script src=/lib/my.js></script>
-	<script src=/lib/vue.min.js></script>
-	<link rel=stylesheet href=/lib/bootstrap.min.css></link>
-<link rel=stylesheet href=/css/header.css></link>
-<script src="/lib/poper.js"></script>
-<script src="/lib/jquery.min.js"></script>
-<script src="/lib/bootstrap.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="/css/404.css" />
-		  <script src="/lib/html5shiv.min.js"></script>
-		  <script src="/lib/respond.min.js"></script>
+	<style type=text/css>
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+#notfound {
+  position: relative;
+  height: 100vh;
+}
+
+#notfound .notfound {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.notfound {
+  max-width: 410px;
+  width: 100%;
+  text-align: center;
+}
+
+.notfound .notfound-404 {
+  height: 280px;
+  position: relative;
+  z-index: -1;
+}
+
+.notfound .notfound-404 h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 230px;
+  margin: 0px;
+  font-weight: 900;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: url('/img/404-background.jpg') no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.notfound h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: #000;
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0;
+}
+
+.notfound p {
+  font-family: 'Montserrat', sans-serif;
+  color: #000;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
+.notfound a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background: #0046d5;
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 40px;
+  color: #fff;
+  font-weight: 700;
+  -webkit-box-shadow: 0px 4px 15px -5px #0046d5;
+          box-shadow: 0px 4px 15px -5px #0046d5;
+}
+
+
+@media only screen and (max-width: 767px) {
+    .notfound .notfound-404 {
+      height: 142px;
+    }
+    .notfound .notfound-404 h1 {
+      font-size: 112px;
+    }
+}
+</style>
+
 	<meta name=viewport content='width=device-width, initial-scale=1.0'/>
 	</head>
 	<body>
-		<div class=container>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/index.html">MJ</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/index.html"><img src=/svg/home.svg class=logo />Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/docs/"><img src=/svg/docs.svg class=logo />Docs</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			<img class=logo src=/svg/plugin.svg />
-          Plugin
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/plugins/mycvjs/">myCanvas.js</a>
-		   <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/plugins/mysvgjs">mySVG.js</a>
-          <a class="dropdown-item" href="/plugins/clipjs">clip.js</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/download.html"><img src=/svg/download.svg class=logo />Download</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0" method=get action=#>
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Enter value in search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-		</div>
 	<div id="notfound">
 		<div class="notfound">
 			<div class="notfound-404">
@@ -64,17 +115,8 @@
 			</div>
 			<h2>404 - Trang không có</h2>
 			<p>Trang bạn đang tìm kiếm có thể đã bị xóa có tên thay đổi hoặc tạm thời không có.</p>
-			<a href="#">Về lại trang chủ</a>
+			<a href="nguyenthanh1995.github.io">Về lại trang chủ</a>
 		</div>
 	</div>
-
-
-		<div class='container mt-5'>
-			<div class='card bg-muted'>
-				<div class=card-body>
-my.js © 2012-2018 Nguyen Thanh - my.js được phát hành theo các điều khoản của giấy phép GNU.
-				</div>
-			</div>
-		</div>
 	</body>
 </html>
