--- a/404.html
+++ b/404.html
@@ -5,7 +5,8 @@
   <meta name="description" content="Error Page Not Full">
   <meta name="keywords" content="Library,my.js,myJS,myjs,shin,nguyenthanh,home,JavaScript">
   <meta name="author" content="Shin">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
+
 	<style type=text/css>
 * {
   -webkit-box-sizing: border-box;
@@ -53,7 +54,7 @@ body {
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
-  background: url('/img/404-background.jpg') no-repeat;
+  background: url('img/404-background.jpg') no-repeat;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: cover;
