--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">Start exploring my tweaks</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="cydia://url/https://cydia.saurik.com/api/share#?source=http://nguyenthanh1995.github.io/">Add Repo</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" id=add-source href="cydia://url/https://cydia.saurik.com/api/share#?source=http://nguyenthanh1995.github.io/">Add Repo</a>
         </div>
       </div>
     </div>
