--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
 
   <meta charset="utf-8">
+<meta name="google-site-verification" content="Z7kUu6LzKOt6CKFCyPWLakCIkqY2JDchbYFSzYVKIYo" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Repo Cydia from shin-dev in Viet Nam">
+  <meta name="author" content="shin-dev">
 
   <title>Repo Cydia N.Thanh</title>
 
