--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
   <meta charset="utf-8">
+<meta name=keywords content="Cydia, nguyen thanh, shin dev, myjs, mycanvas.js">
 <meta name="google-site-verification" content="Z7kUu6LzKOt6CKFCyPWLakCIkqY2JDchbYFSzYVKIYo" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Repo Cydia from shin-dev in Viet Nam">
